ingress/nginx-demo/kibana-logging-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: kibana-logging
  namespace: kube-system
spec:
  rules:
  - host: kibana-logging.havelsan.net
    http:
      paths:
      - backend:
          serviceName: kibana-logging
          servicePort: 5601
        path: /
---
