ingress/nginx-demo/kube-dash-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: kubernetes-dashboard
  namespace: kube-system
spec:
  tls:
    - hosts:
      - kubernetes-dashboard.havelsan.io
      secretName: havelsan.io

  rules:
  - host: kubernetes-dashboard.havelsan.io
    http:
      paths:
      - backend:
          serviceName: kubernetes-dashboard
          servicePort: 80
        path: /
---
