ingress/nginx-demo/kubedash-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: kubedash
  namespace: kube-system
spec:
  rules:
  - host: kubedash.k8s.dc1.havelsan.io
    http:
      paths:
      - backend:
          serviceName: kubernetes-dashboard
          servicePort: 80
        path: /
---
